<?xml version="1.0"?>
<!-- SPDX-License-Identifier: BSD-3-Clause -->
<!-- SPDX-FileCopyrightText: Czech Technical University in Prague -->
<package format="3">
  <name>magnetic_model</name>
  <version>2.0.0</version>
  <description>World Magnetic Model ROS API.</description>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>

  <license file="../LICENSES/BSD-3-Clause.txt">BSD</license>
  <license file="../LICENSES/LicenseRef-WMM-Public-Domain.txt">Public Domain</license>

  <url type="repository">https://github.com/ctu-vras/compass</url>
  <url type="bugtracker">https://github.com/ctu-vras/compass/issues</url>
  <url type="website">https://wiki.ros.org/magnetic_model</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>geographiclib</build_depend>
  <build_depend>roslib</build_depend>

  <exec_depend>angles</exec_depend>
  <exec_depend>geographiclib</exec_depend>
  <exec_depend>roslib</exec_depend>

  <depend>compass_msgs</depend>
  <depend>cras_cpp_common</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
  <test_depend>roslint</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
